--- a/websiteTwo/excalidraw_clone/todo.txt
+++ b/websiteTwo/excalidraw_clone/todo.txt
@@ -1,8 +1,4 @@
-now make footer
-learn more about states like if we press ctrl + the size of website not should be zoomed like charts should be zoomed
-learn about making shapes in website 
-make more componants like it is in menubar and learn from it  
-
-Debug the some bugs on line 
-make remaining tools 
-adjust the canvas size as excalidraw
+go thorugh each line of code, learn all used hooks 
+useRough.js implement that using axios or any other method
+Learn about LocalStorage browser how to implement in react vite
+Add Collabration feature using websockets (Learn about websockets)
