removed manual rendering added rough js

--- a/websiteTwo/excalidraw_clone/todo.txt
+++ b/websiteTwo/excalidraw_clone/todo.txt
@@ -1,4 +1,8 @@
 go thorugh each line of code, learn all used hooks 
 useRough.js implement that using axios or any other method
+
+twojs
+
+
 Learn about LocalStorage browser how to implement in react vite
 Add Collabration feature using websockets (Learn about websockets)
